[gd_scene load_steps=9 format=2]

[ext_resource path="res://staubwolke/Staubwolke.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background/Space_BG_01/Layers/BG.png" type="Texture" id=3]
[ext_resource path="res://scenes/MainCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://worlds/World1.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/Transition/Transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/Transition/Transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/Transition/Transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="World1" type="Node2D"]
script = ExtResource( 7 )

[node name="Tesseracts" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 485, 295 )

[node name="Gegner" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Bg" type="Sprite" parent="ParallaxBackground/Background"]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="supermassiveblackhole" type="Node2D" parent="ParallaxBackground/Background"]

[node name="Stars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.01, 0.01 )

[node name="Planets" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.02, 0.02 )

[node name="Meteors" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.03, 0.03 )

[node name="Transition" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Transition" type="ColorRect" parent="ParallaxBackground/Transition"]
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 1, 1, 1, 0 )

[node name="SunSprite" type="Sprite" parent="ParallaxBackground/Transition"]
scale = Vector2( 0.4, 0.4 )

[node name="MainCamera" parent="." instance=ExtResource( 6 )]
player = NodePath("../Player")

[node name="PfeilContainer" type="Node2D" parent="MainCamera"]

[node name="SunViewport" type="Viewport" parent="."]
size = Vector2( 8192, 8192 )
transparent_bg = true
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="Staubwolke" parent="SunViewport" instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="BlackHole" type="Node2D" parent="."]

[node name="DeadKeyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
